--- a/public/index.html
+++ b/public/index.html
@@ -74,23 +74,22 @@
                     </div>
                     
                 </div>
-                <div class="self-end w-full px-48 mt-20 lg:w-1/2 ">
-                    <div class="mt-10 lg:mt-9 lg:right-0">
-                        <div class="grid w-full grid-cols-1 gap-5 lg:scale-150 md:grid-cols-9 lg:grid-cols-1 ">
+                <div class="self-center w-full px-6 mt-10 lg:w-1/2"> <!-- Adjust the container width and spacing for mobile -->
+                    <div class="grid w-full grid-cols-1 gap-5 lg:scale-150 md:grid-cols-9 lg:grid-cols-1">
                         <div class="relative items-center justify-center overflow-hidden transition-shadow cursor-pointer group hover:shadow-xl hover:shadow-black/30">
-                            <div class="h-96 w-72">
-                              <img class="object-cover w-full h-full transition-transform duration-500 ml-14 lg:ml-0 group-hover:rotate-3 group-hover:scale-125" src="./img/wathan.png" alt="" />
+                            <div class="w-full h-96 lg:w-72"> <!-- Adjust image container width -->
+                                <img class="object-cover w-full h-full ml-0 transition-transform duration-500 lg:ml-14 group-hover:rotate-3 group-hover:scale-125" src="./img/wathan.png" alt="" /> <!-- Use w-full and h-auto for responsive image -->
                             </div>
                             <div class="absolute inset-0 bg-gradient-to-b from-transparent via-transparent to-black group-hover:from-black/70 group-hover:via-black/60 group-hover:to-black/70 rounded-xl"></div>
-                            <div class="absolute inset-0 flex translate-y-[60%] flex-col items-center justify-center px-9 text-center transition-all duration-500 group-hover:translate-y-0">
-                              <h1 class="text-xs uppercase mb-14 lg:text-3xl font-extralight tracking-ngangkang">I am <span class="text-blue-400 font-extralight">Wathan</span></h1>
-                              <p class="mb-3 text-xs uppercase transition-opacity duration-300 opacity-0 font-extralight tracking-ngangkang group-hover:opacity-100">Front-end Developer, Android Developer</p>
-                              <a href="https://github.com/raisulwathan" target="_blank"><button class="rounded-full bg-neutral-900 py-2 px-3.5 font-com text-sm capitalize text-white shadow shadow-black/60">See More</button></a>
+                            <div class="absolute inset-0 flex translate-y-[60%] flex-col items-center justify-center px-6 text-center transition-all duration-500 group-hover:translate-y-0">
+                                <h1 class="mb-5 text-xs uppercase lg:text-3xl font-extralight tracking-ngangkang">I am <span class="text-blue-400 font-extralight">Wathan</span></h1>
+                                <p class="mb-3 text-xs uppercase transition-opacity duration-300 opacity-0 font-extralight tracking-ngangkang group-hover:opacity-100">Front-end Developer, Android Developer</p>
+                                <a href="https://github.com/raisulwathan" target="_blank"><button class="rounded-full bg-neutral-900 py-2 px-3.5 font-com text-sm capitalize text-white shadow shadow-black/60">See More</button></a>
                             </div>
-                          </div>
                         </div>
                     </div>
                 </div>
+                
                 <div class="pt-20 pl-5">
                     <div class="flex">
                         <svg class="w-5 h-5 stroke-2 stroke-gray-400">
