--- a/public/index.html
+++ b/public/index.html
@@ -74,11 +74,11 @@
                     </div>
                     
                 </div>
-                <div class="self-center w-full px-6 mt-10 lg:w-1/2"> <!-- Adjust the container width and spacing for mobile -->
+                <div class="self-center w-full px-6 mt-10 lg:mt-20 lg:px-48 lg:self-end lg:w-1/2"> <!-- Adjust the container width and spacing for mobile -->
                     <div class="grid w-full grid-cols-1 gap-5 lg:scale-150 md:grid-cols-9 lg:grid-cols-1">
                         <div class="relative items-center justify-center overflow-hidden transition-shadow cursor-pointer group hover:shadow-xl hover:shadow-black/30">
                             <div class="w-full h-96 lg:w-72"> <!-- Adjust image container width -->
-                                <img class="object-cover w-full h-full ml-0 transition-transform duration-500 lg:ml-14 group-hover:rotate-3 group-hover:scale-125" src="./img/wathan.png" alt="" /> <!-- Use w-full and h-auto for responsive image -->
+                                <img class="object-cover w-full h-full ml-0 transition-transform duration-500 group-hover:rotate-3 group-hover:scale-125" src="./img/wathan.png" alt="" /> <!-- Use w-full and h-auto for responsive image -->
                             </div>
                             <div class="absolute inset-0 bg-gradient-to-b from-transparent via-transparent to-black group-hover:from-black/70 group-hover:via-black/60 group-hover:to-black/70 rounded-xl"></div>
                             <div class="absolute inset-0 flex translate-y-[60%] flex-col items-center justify-center px-6 text-center transition-all duration-500 group-hover:translate-y-0">
@@ -404,7 +404,7 @@
                 <a href="path-to-certificate-2.jpg" data-lightbox="sertifikat" data-title="Sertifikat 2">
                     <div class="p-4 bg-white rounded-lg shadow-lg">
                       <h2 class="text-xs uppercase font-extralight tracking-ngangkang">
-                          Arkademi
+                          Dicoding
                       </h2>
                       <img src="./img/1_page-0001.jpg" alt="Sertifikat 2" class="object-contain w-full h-48">
                     </div>
@@ -413,7 +413,7 @@
                   <a href="path-to-certificate-2.jpg" data-lightbox="sertifikat" data-title="Sertifikat 2">
                     <div class="p-4 bg-white rounded-lg shadow-lg">
                       <h2 class="text-xs uppercase font-extralight tracking-ngangkang">
-                          Arkademi
+                          Dicoding
                       </h2>
                       <img src="./img/2_page-0001.jpg" alt="Sertifikat 2" class="object-contain w-full h-48">
                     </div>
@@ -422,7 +422,7 @@
                   <a href="path-to-certificate-2.jpg" data-lightbox="sertifikat" data-title="Sertifikat 2">
                     <div class="p-4 bg-white rounded-lg shadow-lg">
                       <h2 class="text-xs uppercase font-extralight tracking-ngangkang">
-                          Arkademi
+                          Dicoding
                       </h2>
                       <img src="./img/3_page-0001.jpg" alt="Sertifikat 2" class="object-contain w-full h-48">
                     </div>
@@ -440,7 +440,7 @@
                   <a href="path-to-certificate-2.jpg" data-lightbox="sertifikat" data-title="Sertifikat 2">
                     <div class="p-4 bg-white rounded-lg shadow-lg">
                       <h2 class="text-xs uppercase font-extralight tracking-ngangkang">
-                          Arkademi
+                          Dicoding
                       </h2>
                       <img src="./img/5_page-0001.jpg" alt="Sertifikat 2" class="object-contain w-full h-48">
                     </div>
@@ -448,7 +448,7 @@
                   <a href="path-to-certificate-2.jpg" data-lightbox="sertifikat" data-title="Sertifikat 2">
                     <div class="p-4 bg-white rounded-lg shadow-lg">
                       <h2 class="text-xs uppercase font-extralight tracking-ngangkang">
-                          Arkademi
+                          Dicoding
                       </h2>
                       <img src="./img/8_page-0001.jpg" alt="Sertifikat 2" class="object-contain w-full h-48">
                     </div>
@@ -456,7 +456,7 @@
                   <a href="path-to-certificate-2.jpg" data-lightbox="sertifikat" data-title="Sertifikat 2">
                     <div class="p-4 bg-white rounded-lg shadow-lg">
                       <h2 class="text-xs uppercase font-extralight tracking-ngangkang">
-                          Arkademi
+                          Bangkit
                       </h2>
                       <img src="./img/bangkit_page-0001.jpg" alt="Sertifikat 2" class="object-contain w-full h-48">
                     </div>
@@ -464,7 +464,7 @@
                   <a href="path-to-certificate-2.jpg" data-lightbox="sertifikat" data-title="Sertifikat 2">
                     <div class="p-4 bg-white rounded-lg shadow-lg">
                       <h2 class="text-xs uppercase font-extralight tracking-ngangkang">
-                          Arkademi
+                          Dicoding
                       </h2>
                       <img src="./img/intermediate_page-0001.jpg" alt="Sertifikat 2" class="object-contain w-full h-48">
                     </div>
@@ -472,7 +472,7 @@
                   <a href="path-to-certificate-2.jpg" data-lightbox="sertifikat" data-title="Sertifikat 2">
                     <div class="p-4 bg-white rounded-lg shadow-lg">
                       <h2 class="text-xs uppercase font-extralight tracking-ngangkang">
-                          Arkademi
+                          Dicoding
                       </h2>
                       <img src="./img/jetpack_page-0001.jpg" alt="Sertifikat 2" class="object-contain w-full h-48">
                     </div>
@@ -485,8 +485,8 @@
             
     </section>
 
-    <footer class="py-8 text-sm font-light text-gray-200 bg-gray-900 " id="contact">
-        <div class="container flex flex-wrap justify-between mx-auto">
+    <footer id="contact" class="py-8 text-sm font-light text-gray-200 bg-gray-900 " >
+        <div class="container flex flex-wrap justify-between ml-12 lg:mx-auto ">
           <div class="w-full mb-4 md:w-1/2 lg:w-1/4 md:mb-0">
             <h3 class="mb-4 text-xl font-semibold">Contact</h3>
             <p>Email: Raisulwathan07@gmail.com</p>
